--- a/debian/control
+++ b/debian/control
@@ -30,3 +30,12 @@ Description: Dictionary for e-Ink devices -- N516 keymapping
  keys and slow screen refresh.
  .
  This package contains keymapping configuration file for Hanvon N516.
+
+Package: edict-theme-azbooka
+Architecture: all
+Depends: dejavu-fonts
+Description: Dictionary for e-Ink devices -- Azbooka theme
+ edict is a dictionary designed to be usable on devices with limited abount of
+ keys and slow screen refresh.
+ .
+ This package contains Azbooka theme for edict
